@@ -174,7 +174,17 @@ void KNoteEdit::setTextFont( const QFont& font )
 
 void KNoteEdit::setTextColor( const QColor& color )
 {
-    setColor( color );
+    if ( textFormat() == PlainText )
+    {
+        int pFrom, pTo, iFrom, iTo;
+        getSelection( &pFrom, &iFrom, &pTo, &iTo );
+        selectAll();
+        setColor( color );
+        setSelection( pFrom, iFrom, pTo, iTo );
+    }
+    else
+        setColor( color );
+
     colorChanged( color );
 }
 
